fixed small navbar on mobile site

--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -91,6 +91,5 @@
 @media only screen and (max-width: 450px) {
   .nav {
     font-size: 1rem;
-    padding: 0 1rem 0 1rem;
   }
 }
